--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Simples</title>
+    <style>
+       /*definição do estilo da página*/
+       body {
+        font-family: Arial, sans-serif;/*definir a fonte do texto*/
+       }
+    </style>
 </head>
 <body>
-    
+    <!--titulo principal da pagina-->
+    <h1>Bem-vindo ao meu site simples</h1>
+    <!--criando o botao que mudara a cor de fundo-->
+    <button onclick="mudarCor()">Mudar Cor de Fundo</button>
 </body>
 </html>
