--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
        /*definição do estilo da página*/
        body {
         font-family: Arial, sans-serif;/*definir a fonte do texto*/
-       }
+        text-align: center; /*centralizar o texto na pagina*/
+        margin: 50px; /*uma margem ao redor do conteudo*/
+        
+    }
     </style>
 </head>
 <body>
