--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
         font-family: Arial, sans-serif;/*definir a fonte do texto*/
         text-align: center; /*centralizar o texto na pagina*/
         margin: 50px; /*uma margem ao redor do conteudo*/
-        
-    }
+        background-color: #f4f4f4; /*definir a cor de fundo padrão*/
+        }
+        /*esilizr o botão*/
+        button{
+            padding: 10px 20px; /*definir o tamanho do botão*/
+            font-size: 16px; /*definir o tamanho da fonte dp botão*/
+            cursor: pointer; /*alterar o cursor ao passar pelo botão*/
+            background-color: blue; /*definir a cor de fundo*/
+            color: white; /*definir a cor do botão*/
+            border:none /*remover a borda do botão*/ 
+            border-radius : 5px; /*adicionar cantos arredondados ao botão*/
+
+        }
     </style>
 </head>
 <body>
     <!--titulo principal da pagina-->
     <h1>Bem-vindo ao meu site simples</h1>
     <!--criando o botao que mudara a cor de fundo-->
-    <button onclick="mudarCor()">Mudar Cor de Fundo</button>
+    <button onclick="mudarCor()">Mudar Cor de Fundo</button> 
 </body>
 </html>
