--- a/index.html
+++ b/index.html
@@ -1,67 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Surpresa Espacial para Você</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
-
-  body {
-    margin: 0;
-    background: radial-gradient(ellipse at center, #000011 0%, #000022 100%);
-    height: 100vh;
-    font-family: 'Comic Neue', cursive, Arial, sans-serif;
-    color: #fff;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
-  }
-
-  h1 {
-    margin-bottom: 1rem;
-    color: #66ccff;
-    text-shadow: 0 0 8px #66ccff;
-  }
-
-  /* Estrelas de fundo */
-  .stars {
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    pointer-events: none;
-    z-index: 0;
-  }
-  .star {
-    position: absolute;
-    background: white;
-    border-radius: 50%;
-    opacity: 0.8;
-    animation: twinkle 3s infinite ease-in-out alternate;
-  }
-  .star:nth-child(odd) {
-    animation-duration: 2.5s;
-  }
-  .star:nth-child(even) {
-    animation-duration: 3.5s;
-  }
-  @keyframes twinkle {
-    0% {opacity: 0.2;}
-    100% {opacity: 1;}
-  }
-
-  /* Container dos personagens */
-  .characters {
-    display: flex;
-    gap: 2rem;
-    margin-bottom: 2rem;
-    cursor: pointer;
-    z-index: 10;
-  }
-
-  /* Movimento voador (subindo e descendo) */
-  @keyframes fly {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-
+<html>
+<head><title>Teste</title></head>
+<body><h1>Funciona!</h1></body>
+</html>
