--- a/index.html
+++ b/index.html
@@ -1,5 +1,167 @@
 <!DOCTYPE html>
-<html>
-<head><title>Teste</title></head>
-<body><h1>Funciona!</h1></body>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Carta Espacial 💌✨</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      height: 100vh;
+      background: radial-gradient(ellipse at bottom, #000014 0%, #000000 100%);
+      font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
+      color: white;
+    }
+
+    .stars {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: url('https://raw.githubusercontent.com/Klerith/starfield/main/img/stars.png') repeat;
+      z-index: 0;
+      animation: moveStars 60s linear infinite;
+    }
+
+    @keyframes moveStars {
+      from {background-position: 0 0;}
+      to {background-position: -10000px 10000px;}
+    }
+
+    .container {
+      position: relative;
+      z-index: 1;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      text-align: center;
+    }
+
+    .characters {
+      position: absolute;
+      width: 100%;
+      top: 10%;
+      left: 0;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 10%;
+    }
+
+    .characters img {
+      width: 100px;
+      animation: float 4s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+
+    .card {
+      width: 320px;
+      height: 420px;
+      perspective: 1200px;
+      cursor: pointer;
+    }
+
+    .card-inner {
+      width: 100%;
+      height: 100%;
+      transition: transform 1s;
+      transform-style: preserve-3d;
+      position: relative;
+    }
+
+    .card.flipped .card-inner {
+      transform: rotateY(180deg);
+    }
+
+    .card-front, .card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      backface-visibility: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1.5rem;
+    }
+
+    .card-front {
+      background: #ff8a8a;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: white;
+      box-shadow: 0 0 20px #ff4c4c;
+    }
+
+    .card-back {
+      background: #fff;
+      color: #c62828;
+      transform: rotateY(180deg);
+      flex-direction: column;
+      gap: 1rem;
+      font-size: 1rem;
+    }
+
+    .close-btn {
+      background: #ff4c4c;
+      border: none;
+      color: white;
+      font-size: 1.2rem;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 0 10px #ff4c4c;
+    }
+
+    .close-btn:hover {
+      background: #d32f2f;
+    }
+  </style>
+</head>
+<body>
+  <div class="stars"></div>
+
+  <div class="container">
+    <div class="characters">
+      <img src="https://i.imgur.com/wPtMCJb.png" alt="Gumball" />
+      <img src="https://i.imgur.com/3M5RssG.png" alt="Darwin" />
+    </div>
+
+    <div class="card" id="card">
+      <div class="card-inner">
+        <div class="card-front">💌 Abrir Carta</div>
+        <div class="card-back">
+          <p>Querida,</p>
+          <p>Você é como uma estrela brilhando no meu universo. 💫</p>
+          <p>Com carinho,<br>Derick 🚀</p>
+          <button class="close-btn" onclick="fecharCarta(event)">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const carta = document.getElementById('card');
+
+    carta.addEventListener('click', () => {
+      carta.classList.add('flipped');
+    });
+
+    function fecharCarta(event) {
+      event.stopPropagation();
+      carta.classList.remove('flipped');
+    }
+  </script>
+</body>
 </html>
