--- a/index.html
+++ b/index.html
@@ -2,166 +2,124 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carta Espacial 💌✨</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Carta Espacial 💌</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     body {
       height: 100vh;
-      background: radial-gradient(ellipse at bottom, #000014 0%, #000000 100%);
-      font-family: 'Segoe UI', sans-serif;
+      background: radial-gradient(ellipse at bottom, #08172d 0%, #000000 100%);
       overflow: hidden;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      position: relative;
       color: white;
     }
 
-    .stars {
+    .stars, .stars2 {
       position: absolute;
       width: 100%;
       height: 100%;
-      background: url('https://raw.githubusercontent.com/Klerith/starfield/main/img/stars.png') repeat;
+      top: 0;
+      left: 0;
+      background: transparent url('https://i.imgur.com/9jR2l8c.png') repeat;
+      animation: twinkle 20s linear infinite;
       z-index: 0;
-      animation: moveStars 60s linear infinite;
+    }
+    .stars2 {
+      opacity: 0.3;
+      background-size: 50px;
+      animation-duration: 40s;
     }
 
-    @keyframes moveStars {
-      from {background-position: 0 0;}
-      to {background-position: -10000px 10000px;}
+    @keyframes twinkle {
+      0%, 100% {opacity: 0.8;}
+      50% {opacity: 0.2;}
+    }
+
+    .moon, .saturn {
+      position: absolute;
+      z-index: 1;
+      width: 100px;
+      opacity: 0.9;
+    }
+
+    .moon {
+      top: 30px;
+      left: 30px;
+    }
+
+    .saturn {
+      bottom: 30px;
+      right: 30px;
     }
 
     .container {
       position: relative;
-      z-index: 1;
+      z-index: 2;
       height: 100%;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 2rem;
-      text-align: center;
-    }
-
-    .characters {
-      position: absolute;
-      width: 100%;
-      top: 10%;
-      left: 0;
-      display: flex;
-      justify-content: space-between;
-      padding: 0 10%;
-    }
-
-    .characters img {
-      width: 100px;
-      animation: float 4s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-20px); }
     }
 
     .card {
-      width: 320px;
-      height: 420px;
-      perspective: 1200px;
-      cursor: pointer;
-    }
-
-    .card-inner {
-      width: 100%;
-      height: 100%;
-      transition: transform 1s;
-      transform-style: preserve-3d;
-      position: relative;
-    }
-
-    .card.flipped .card-inner {
-      transform: rotateY(180deg);
-    }
-
-    .card-front, .card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
+      background: linear-gradient(135deg, #ffffffdd, #e0e0ffcc);
       border-radius: 20px;
-      backface-visibility: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 1.5rem;
+      padding: 2rem;
+      max-width: 360px;
+      text-align: center;
+      color: #333;
+      box-shadow: 0 0 30px #44f5ff88;
+      transition: transform 0.8s;
     }
 
-    .card-front {
-      background: #ff8a8a;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: white;
-      box-shadow: 0 0 20px #ff4c4c;
+    .card h2 {
+      margin-bottom: 1rem;
     }
 
-    .card-back {
-      background: #fff;
-      color: #c62828;
-      transform: rotateY(180deg);
-      flex-direction: column;
-      gap: 1rem;
-      font-size: 1rem;
-    }
-
-    .close-btn {
-      background: #ff4c4c;
+    .open-btn {
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #44f5ff;
+      color: #000;
+      padding: 0.8rem 1.5rem;
       border: none;
-      color: white;
-      font-size: 1.2rem;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
+      border-radius: 30px;
+      font-size: 1rem;
       cursor: pointer;
-      box-shadow: 0 0 10px #ff4c4c;
+      box-shadow: 0 0 10px #44f5ff;
+      transition: background 0.3s ease;
+      z-index: 3;
     }
 
-    .close-btn:hover {
-      background: #d32f2f;
+    .open-btn:hover {
+      background: #2bc9d7;
+    }
+
+    .card.hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
   <div class="stars"></div>
+  <div class="stars2"></div>
+  <img src="https://i.imgur.com/xXjUAbf.png" class="moon" alt="Lua">
+  <img src="https://i.imgur.com/FN66B5F.png" class="saturn" alt="Saturno">
 
   <div class="container">
-    <div class="characters">
-      <img src="https://i.imgur.com/wPtMCJb.png" alt="Gumball" />
-      <img src="https://i.imgur.com/3M5RssG.png" alt="Darwin" />
-    </div>
-
-    <div class="card" id="card">
-      <div class="card-inner">
-        <div class="card-front">💌 Abrir Carta</div>
-        <div class="card-back">
-          <p>Querida,</p>
-          <p>Você é como uma estrela brilhando no meu universo. 💫</p>
-          <p>Com carinho,<br>Derick 🚀</p>
-          <button class="close-btn" onclick="fecharCarta(event)">Fechar</button>
-        </div>
-      </div>
+    <div class="card hidden" id="card">
+      <h2>Para cachinhos 💙</h2>
+      <p>.</p>
     </div>
   </div>
 
-  <script>
-    const carta = document.getElementById('card');
-
-    carta.addEventListener('click', () => {
-      carta.classList.add('flipped');
-    });
-
-    function fecharCarta(event) {
-      event.stopPropagation();
-      carta.classList.remove('flipped');
-    }
-  </script>
+  <button class="open-btn" onclick="document.getElementById('card').classList.remove('hidden'); this.style.display='none'">Abrir Carta 💌</button>
 </body>
 </html>
