--- a/index.html
+++ b/index.html
@@ -2,79 +2,169 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carta para Você 💌</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Para você 💌</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+      margin: 0; padding: 0; box-sizing: border-box;
     }
 
-    body, html {
-      width: 100%;
-      height: 100%;
-      font-family: 'Segoe UI', sans-serif;
-      color: white;
-      background: url('IMG_20250612_193437.jpg') no-repeat center center fixed;
+    body {
+      height: 100vh;
+      background: url('277a53bca9186d041a22a546a.jpg') no-repeat center center;
       background-size: cover;
+      font-family: 'Segoe UI', sans-serif;
+      color: #fff;
       overflow: hidden;
+      position: relative;
     }
 
     .container {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       flex-direction: column;
-      gap: 20px;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      gap: 2rem;
+      position: relative;
+      z-index: 2;
     }
 
-    .letter {
-      background: #fff0f0;
-      color: #600000;
-      padding: 2rem;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #ff6f91;
-      width: 300px;
-      text-align: center;
-      display: none;
-      animation: fadeIn 1s ease forwards;
+    .gumball {
+      position: absolute;
+      bottom: 10%;
+      left: 10%;
+      width: 120px;
+      animation: floaty 5s ease-in-out infinite alternate;
+      z-index: 1;
     }
 
-    .btn {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 20px;
-      background: #ff4c4c;
-      color: white;
-      font-size: 1.1rem;
+    @keyframes floaty {
+      0% { transform: translateY(0) rotate(0deg); }
+      50% { transform: translateY(-20px) rotate(5deg); }
+      100% { transform: translateY(0) rotate(0deg); }
+    }
+
+    .letter-container {
+      perspective: 1200px;
+      width: 320px;
+      height: 400px;
       cursor: pointer;
-      box-shadow: 0 0 10px #ff4c4c88;
-      transition: background 0.3s ease;
     }
 
-    .btn:hover {
-      background: #ff1f1f;
+    .letter-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transition: transform 1s;
+      transform-style: preserve-3d;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+    .letter-container.flipped .letter-inner {
+      transform: rotateY(180deg);
     }
+
+    .letter-front, .letter-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      backface-visibility: hidden;
+      box-shadow: 0 0 20px #ff8abf;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+    }
+
+    .letter-front {
+      background: #ff6688;
+      color: white;
+      font-size: 1.4rem;
+    }
+
+    .letter-back {
+      background: #fff0f5;
+      color: #880033;
+      transform: rotateY(180deg);
+      flex-direction: column;
+      padding: 2rem;
+      font-size: 1rem;
+      line-height: 1.5;
+      text-align: center;
+    }
+
+    .close-btn {
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background: #ff6688;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 1rem;
+      box-shadow: 0 0 10px #ffb3d1;
+      transition: 0.3s;
+    }
+
+    .close-btn:hover {
+      background: #ff3366;
+    }
+
+    .stars {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: transparent url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="3" height="3"><circle cx="1.5" cy="1.5" r="1.5" fill="white" /></svg>') repeat;
+      background-size: 10px 10px;
+      animation: twinkle 8s linear infinite;
+      opacity: 0.3;
+      z-index: 0;
+    }
+
+    @keyframes twinkle {
+      0%, 100% { opacity: 0.3; }
+      50% { opacity: 0.8; }
+    }
+
   </style>
 </head>
 <body>
+  <div class="stars"></div>
+
+  <img src="3048d9cfbadb429ac93eb86b3d.jpg" alt="Gumball astronauta" class="gumball" />
+
   <div class="container">
-    <button class="btn" onclick="document.querySelector('.letter').style.display = 'block'">Abrir Carta 💌</button>
-    <div class="letter">
-      <p>Teus olhos brilham mais que as estrelas que cobrem o céu infinito.<br><br>
-      Neles, encontro galáxias de paz, universos de carinho e constelações de amor.<br><br>
-      São faróis que guiam meu coração, mesmo nas noites mais escuras.<br><br>
-      Cada vez que te olho, é como viajar pelo cosmos em busca de algo tão belo quanto você.<br><br>
-      E mesmo se eu visitasse todos os cantos do universo, sei que nada se compararia à imensidão do que sinto por ti.<br><br>
-      Você é o meu universo favorito.</p>
+    <div class="letter-container" id="letter">
+      <div class="letter-inner">
+        <div class="letter-front">Clique para abrir 💌</div>
+        <div class="letter-back">
+          <p>Seus olhos são como constelações, guiando meu coração na escuridão.</p>
+          <p>No silêncio do universo, seu olhar é o som mais bonito.</p>
+          <p>Você é o céu onde minha alma encontra paz.</p>
+          <p>Entre estrelas e planetas, nenhum brilha como você.</p>
+          <p>Te olhar é como viajar pelas galáxias — mágico e infinito.</p>
+          <p>Com você, tudo é mais bonito, mais leve, mais eterno.</p>
+          <p>Meu amor por você é tão vasto quanto o próprio universo. ✨</p>
+          <button class="close-btn" id="closeBtn">Fechar</button>
+        </div>
+      </div>
     </div>
   </div>
+
+  <script>
+    const letter = document.getElementById("letter");
+    const closeBtn = document.getElementById("closeBtn");
+
+    letter.addEventListener("click", () => {
+      letter.classList.add("flipped");
+    });
+
+    closeBtn.addEventListener("click", (e) => {
+      e.stopPropagation();
+      letter.classList.remove("flipped");
+    });
+  </script>
 </body>
 </html>
