--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     body {
       min-height: 100vh;
-      background: url('277a53bca9186d041a22a546a.jpg') no-repeat center center;
+      background: url('Screenshot_2025-06-12-20-03-58-170_com.miui.gallery.jpg') no-repeat center center;
       background-size: cover;
       font-family: 'Segoe UI', sans-serif;
       color: #fff;
@@ -32,8 +32,8 @@
 
     .letter-container {
       perspective: 1200px;
-      width: 320px;
-      height: 400px;
+      width: 360px;
+      height: 460px;
       cursor: pointer;
     }
 
